# fastapi-l

./: .gitignore  blog.db  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 055a92e1d873_add_likes_field_to_posts.py  c9acc446d2b3_initial_schema.py
src/fastapi_l/: __init__.py  auth.py  aws_bucket_policy.json  aws_iam_policy.json  check_s3.py  config.py  database.py  email_utils.py  image_utils.py  main.py  models.py  schemas.py  utils.py
src/fastapi_l/routers/: posts.py  users.py
static/: site.webmanifest
static/css/: main.css
static/js/: auth.js  utils.js
templates/: account.html  home.html  layout.html  login.html  post.html  user_posts.html
templates/email/: password_reset.html
